@@ -1,0 +1,2 @@
+INSERT INTO `psss_config_help` (`id`, `enabled`, `idx`, `title`, `content`, `img`, `weight`) VALUES
+(38, 1, 0, 'Blood Dolls', '<p>Every league has them.  \"Blood dolls\" are the owners that enable owners with dominant teams to maintain their dominance.  You might not notice them when they make a trade, and specific trades might not seem unbalanced, but when you add all the trades they make with their \"vampire\" up, you will see a repeated pattern of trades that favour the dominant team.  Typically there will be a common thread, something the \"vampire\" offers that the \"blood doll\" finds irresistible.</p>\r\n\r\n<p>The results will also be consistent.  The vampire team will consistently be a top team in the league, while the blood doll team will flounder.  Do you want your team to be a \"blood doll\" for a dominant team?  Probably not...</p>', 'blood_doll.webp', 0);
